# agents-assistant-kit

./: .clinerules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md  PROJECT_OVERVIEW.md  README.md  install.sh  package.json  pyproject.toml  setup.sh  walkthrough.md
.agents/scripts/: analyze-diff.sh  find-tests.sh
.github/: copilot-instructions.md
agents-md-templates/: general.md  node-typescript.md  python-fastapi.md
project-template/: .clinerules  .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md
project-template/.cursor/: mcp.json  rules.md
project-template/.github/: copilot-instructions.md
scripts/: project-context.sh
skills/architect-cloud/: SKILL.md
skills/architect-onprem/: SKILL.md
skills/brainstorming/: SKILL.md
skills/bug-analyzer/: SKILL.md
skills/build-mcp-server/: SKILL.md
skills/code-planner/: SKILL.md
skills/code-review/: SKILL.md
skills/debug-assistant/: SKILL.md
skills/devops/: SKILL.md
skills/doc-writer/: SKILL.md
skills/executing-plans/: SKILL.md
skills/frontend-design/: SKILL.md
skills/git-workflow/: SKILL.md
skills/nodejs-expert/: SKILL.md
skills/problem-solving/: SKILL.md
skills/python-expert/: SKILL.md
skills/refactor/: SKILL.md
skills/requirements-specifier/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-orchestrator/: SKILL.md
skills/systematic-debugging/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/test-writer/: SKILL.md
skills/troubleshoot-infra/: SKILL.md
tests/: test-helpers.sh  test-install.sh  test-skill-descriptions.sh  test-skill-frontmatter.sh
(+49 files in other folders)
